docs: correction email et lien facebook, modif taille .background version mobile

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header {
   top: 50%;
   left: 50%;
   width: 90%;
-  height: 20vh;
+  height: 25vh;
   background-color: #66553B;
   box-shadow: 3px 10px 8px rgba(0, 0, 0, 0.2);
   z-index: 2; /* devant l’image */
@@ -665,7 +665,6 @@ footer ul {
     flex-direction: column;
     margin-left: 1%;
     justify-content: center;
-    /* align-items: center; */
     padding: 0;
   }
   
@@ -694,7 +693,6 @@ footer ul {
   margin-top: 2%;
   width: 100%;
   height: 100%;
-  
 }
 
 /* DIV placer à gauche */
